{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 182,
  "lineage": "653dfeef-2a32-98db-4f21-c51f73232df3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "demo_vpc_default_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273792673985:route-table/rtb-0ceb52cd4d2c21f76",
            "default_route_table_id": "rtb-0ceb52cd4d2c21f76",
            "id": "rtb-0ceb52cd4d2c21f76",
            "owner_id": "273792673985",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a0e7e300f6873bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-default-rt"
            },
            "tags_all": {
              "Name": "tf-vpc-default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03130e1b89cdf8a74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fc49795bc410a0c",
            "arn": "arn:aws:ec2:ap-south-1:273792673985:instance/i-0ae774a9a2abf1f4d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae774a9a2abf1f4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0572fcd91da03f8e3",
            "private_dns": "ip-192-168-2-48.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.48",
            "public_dns": "ec2-65-0-80-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.80.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b27ebf1d9b06973",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e632b60f1a3d7bd",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069a4bfd79da407d1"
            ]
          },
          "dependencies": [
            "aws_db_instance.demo_database",
            "aws_db_subnet_group.demo_db_subnet_group",
            "aws_key_pair.demo_ssh_pub_key",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet1",
            "aws_subnet.demo_subnet2",
            "aws_vpc.demo_vpc",
            "data.aws_ami.updated_ami",
            "data.aws_availability_zones.available",
            "data.publicip_address.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273792673985:internet-gateway/igw-02a0e7e300f6873bc",
            "id": "igw-02a0e7e300f6873bc",
            "owner_id": "273792673985",
            "tags": {
              "Name": "tf-vpc-igw"
            },
            "tags_all": {
              "Name": "tf-vpc-igw"
            },
            "vpc_id": "vpc-03130e1b89cdf8a74"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273792673985:security-group/sg-069a4bfd79da407d1",
            "description": "Allow required traffic for the application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069a4bfd79da407d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "2.2.2.2/32"
                ],
                "description": "nfs port",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "59.88.176.41/32"
                ],
                "description": "rdp port",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "59.88.176.41/32"
                ],
                "description": "ssh port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "rds port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "tf-vpc-sg",
            "name_prefix": "",
            "owner_id": "273792673985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-vpc-sg"
            },
            "tags_all": {
              "Name": "tf-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03130e1b89cdf8a74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc",
            "data.publicip_address.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273792673985:subnet/subnet-02e632b60f1a3d7bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e632b60f1a3d7bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273792673985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-subnet1"
            },
            "tags_all": {
              "Name": "tf-vpc-subnet1"
            },
            "vpc_id": "vpc-03130e1b89cdf8a74"
          },
          "dependencies": [
            "aws_vpc.demo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273792673985:subnet/subnet-0e99508fbb7520e44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e99508fbb7520e44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273792673985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-subnet2"
            },
            "tags_all": {
              "Name": "tf-vpc-subnet2"
            },
            "vpc_id": "vpc-03130e1b89cdf8a74"
          },
          "dependencies": [
            "aws_vpc.demo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273792673985:vpc/vpc-03130e1b89cdf8a74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.2.0/24",
            "default_network_acl_id": "acl-0934b28d65ed1a867",
            "default_route_table_id": "rtb-0ceb52cd4d2c21f76",
            "default_security_group_id": "sg-016a1aeb417dc6243",
            "dhcp_options_id": "dopt-076594c4115b46dc1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03130e1b89cdf8a74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ceb52cd4d2c21f76",
            "owner_id": "273792673985",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}